# gasbox

./: .gitignore  CMakeLists.txt  CMakePresets.json  imgui.ini
build-linux/: .ninja_deps  .ninja_log  CMakeCache.txt  Makefile  build.ninja  cmake_install.cmake  gasbox
build-linux/libs/imgui-sfml/: Makefile  cmake_install.cmake
build-windows/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake
src/: Box.cpp  Box.hpp  Particle.cpp  Particle.hpp  ParticleSoA.cpp  ParticleSoA.hpp  Plot.cpp  Plot.hpp  Simulation.cpp  Simulation.hpp  main.cpp
